--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -61,24 +61,28 @@
 .slick-prev{
     left: unset !important;
     right: -25px ;
-    top: 45% !important;
+    top: 30% !important;
+    
 }
 
 .slick-next{
-    top: 55% !important;
+    top: 42% !important;
 }
 
 .slick-next:before{
+    transform: rotate(270deg) !important;
     content: '' !important;
-    width: 26px;
-    height: 26px;
+    width: 36px;
+    height: 36px;
     display: block;
+    background-size: 36px;
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' version='1.1' id='Icons' viewBox='0 0 32 32' xml:space='preserve'%3E%3Cstyle type='text/css'%3E .st0%7Bfill:none;stroke:%23ffffff;stroke-width:2;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:10;%7D%0A%3C/style%3E%3Ccircle class='st0' cx='16' cy='16' r='13' fill='%23ffffff'/%3E%3Cpolyline class='st0' points='18,20.2 13.8,16 18,11.8 ' fill='%23ffffff'/%3E%3C/svg%3E") !important;
 }
 .slick-prev:before{
+    transform: rotate(90deg) !important;
     content: '' !important;
-    width: 26px;
-    height: 26px;
+    width: 36px;
+    height: 36px;
     display: block;
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' version='1.1' id='Icons' viewBox='0 0 32 32' xml:space='preserve'%3E%3Cstyle type='text/css'%3E .st0%7Bfill:none;stroke:%23ffffff;stroke-width:2;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:10;%7D%0A%3C/style%3E%3Ccircle class='st0' cx='16' cy='16' r='13' fill='%23ffffff'/%3E%3Cpolyline class='st0' points='18,20.2 13.8,16 18,11.8 ' fill='%23ffffff'/%3E%3C/svg%3E") !important;
 }
