--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 @font-face {
     font-family: 'Avenir Next';
     src: url('AvenirNext-Heavy.eot');
@@ -62,7 +66,7 @@
     left: unset !important;
     right: -25px ;
     top: 30% !important;
-    
+
 }
 
 .slick-next{
@@ -86,3 +90,7 @@
     display: block;
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' version='1.1' id='Icons' viewBox='0 0 32 32' xml:space='preserve'%3E%3Cstyle type='text/css'%3E .st0%7Bfill:none;stroke:%23ffffff;stroke-width:2;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:10;%7D%0A%3C/style%3E%3Ccircle class='st0' cx='16' cy='16' r='13' fill='%23ffffff'/%3E%3Cpolyline class='st0' points='18,20.2 13.8,16 18,11.8 ' fill='%23ffffff'/%3E%3C/svg%3E") !important;
 }
+
+/* story-section */
+
+/* story-section */
